# customer-support-voice-agent

./: pyproject.toml
agent/: agent.py  pyproject.toml  requirements.txt
agent/prompts/: __init__.py  faq.md  system.md
frontend/: .env.example  components.json  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/agents-ui/: agent-session-provider.tsx
frontend/src/components/core/: theme-provider.tsx  theme-toggle.tsx
server/: .env.example  .gitignore  main.py  pyproject.toml
