[project]
name = "agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "livekit>=1.1.13",
    "livekit-plugins-cartesia>=1.3.11",
    "livekit-plugins-deepgram>=1.3.11",
    "livekit-plugins-groq>=1.3.11",
    "livekit-plugins-noise-cancellation>=0.2.6",
    "livekit-plugins-silero>=1.3.11",
    "livekit-plugins-turn-detector>=1.3.11",
    "python-dotenv>=1.2.2",
]
